--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
     "sqlite3": "^5.1.7"
   }
